Fixing broken css

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,9 +1,3 @@
-
-
-
-/* Basic
-=================================================================== */
-
 #overlay {
 	background: #080808;
 	position: fixed;
@@ -91,41 +85,6 @@
 	-o-animation-delay: 1.25s;
 	-ms-animation-delay: 1.25s;
 	animation-delay: 1.25s;
-}
-
-@-webkit-keyframes loading {
-	0% {-webkit-transform: translateX(-30px); opacity: 0}
-	25% {opacity: 1}
-	50% {-webkit-transform: translateX(30px); opacity: 0}
-	100% {opacity: 0}
-}
-
-@-moz-keyframes loading {
-	0% {-moz-transform: translateX(-30px); opacity: 0}
-	25% {opacity: 1}
-	50% {-moz-transform: translateX(30px); opacity: 0}
-	100% {opacity: 0}
-}
-
-@-o-keyframes loading {
-	0% {-o-transform: translateX(-30px); opacity: 0}
-	25% {opacity: 1}
-	50% {-o-transform: translateX(30px); opacity: 0}
-	100% {opacity: 0}
-}
-
-@-ms-keyframes loading {
-	0% {-ms-transform: translateX(-30px); opacity: 0}
-	25% {opacity: 1}
-	50% {-ms-transform: translateX(30px); opacity: 0}
-	100% {opacity: 0}
-}
-
-@keyframes loading {
-	0% {-ms-transform: translateX(-30px); opacity: 0}
-	25% {opacity: 1}
-	50% {-ms-transform: translateX(30px); opacity: 0}
-	100% {opacity: 0}
 }
 
 
